@@ -5,7 +5,7 @@ development home at https://github.com/projectestac/agora_nodes
 
 Changes in progress
 ---------------------------------------------------------------------------------------
-- Upgraded WordPress to version 4.5.2 (Trello #1272)
+- Upgraded WordPress to version 4.5.3 (Trello #1272)
 - Reviewed embed support in kses to let contributors add Picasa web albums (Trello #1182)
 - BuddyPress Group Email Subscription: Converted to submodule and updated to 3.6.1 (Trello #1042)
 - enllacos-educatius: Replaced Ministry of Education link
@@ -14,6 +14,7 @@ Changes in progress
 - wordpress-php-info: Upgraded from version 14.12 to version 15
 - mu-common: Deactivate pingback to avoid attacks to other sites (Trello #1275)
 - mu-common: Removed fix for post thumbnails broken due to upgrading to WP 4.4. No longer necessary in WP 4.5
+- buddypress-docs: Suggest labels when adding new documents (Trello #1228)
 
 
 Changes 16.05.03
